--- a/content/resources/21m-299f17-th.md
+++ b/content/resources/21m-299f17-th.md
@@ -4,11 +4,10 @@ description: ''
 file: /courses/21m-299-the-beatles-fall-2017/c05b52e6c2720a91df5ea4ddbe9b2e12_21m-299f17-th.jpg
 file_size: 4162
 file_type: image/jpeg
-hide_download: true
-hide_download_original: null
 image_metadata:
   caption: 'The Beatles arrive at JFK Airport in 1964 for a press conference. (Image
-    is in the public domain. Source: [Wikimedia Commons](https://commons.wikimedia.org/wiki/File:The_Beatles_arrive_at_JFK_Airport.jpg).)'
+    is in the public domain. Source: {{% resource_link "b1de100c-b576-4b7f-a248-5247693530e4"
+    "Wikimedia Commons" %}}.)'
   credit: ''
   image-alt: Four men on the tarmac at JFK airport waving to a crowd.
 learning_resource_types: []
